--- a/server/mpm.css
+++ b/server/mpm.css
@@ -55,3 +55,53 @@ body {
   from {opacity: 0;}
   to {opacity: 1;}
 }
+
+/* ******************************************************** */
+.test_tableClassList {
+  background-color:   #ffdddd;
+  border-style:       solid;
+  border-width:       3px;
+  border-color:       #ff5555;
+  outline: 1px;
+}
+
+.test_theadClassList {
+  background-color:   #ddffdd;
+  border-style:       solid;
+  border-width:       3px;
+  border-color:       #55ff55;
+  outline: 1px;
+}
+
+.test_tbodyClassList {
+  background-color:   #ddddff;
+  border-style:       solid;
+  border-width:       3px;
+  border-color:       #5555ff;
+  outline: 1px;
+}
+
+.test_trOddClassList {
+  background-color:   #ffddff;
+  border-style:       solid;
+  border-width:       3px;
+  border-color:       #ff55ff;
+  outline: 1px;
+}
+
+.test_trEvenClassList {
+  background-color:   #ddffff;
+  border-style:       solid;
+  border-width:       3px;
+  border-color:       #55ffff;
+  outline: 1px;
+}
+
+.test_tdClassList {
+  background-color:   #ffdddd;
+  border-style:       solid;
+  border-width:       3px;
+  border-color:       #ff5555;
+  outline: 1px;
+}
+
