Added saveRecord functionality,
NEXT: Add in removeRecord, and refactor so that either `remove` or
`delete` is used everywhere consistently. Right now I use both words to
mean the same thing in different parts of the code.

--- a/server/mpm.css
+++ b/server/mpm.css
@@ -119,3 +119,9 @@ body {
   width: 100%;
 }
 
+.test_changedRowClass {
+  background-color:   #77999977;
+  border-width: 2px;
+  border-color: ff000000;
+}
+
