--- a/server/defaultLiveTableClasses.css
+++ b/server/defaultLiveTableClasses.css
@@ -119,3 +119,24 @@
   border-color: ff000000;
 }
 
+.default_inlineDeleteBtnClassList {
+  background-color: inherit;
+  border-style: none;
+  border-width: 0px;
+  color: #770d0d;
+  text-align: center;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.default_inlineEditBtnClassList {
+  background-color: inherit;
+  border-style: none;
+  border-width: 0px;
+  color: #0d0d77;
+  text-align: center;
+  font-size: 16px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
